# gh-private-card

./: .env  .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/core/: mod.rs  routes.rs
src/core/routes/: github.rs
src/features/: github.rs  mod.rs
src/features/github/: helpers.rs  mod.rs  models.rs  routes.rs
src/features/healthcheck/: mod.rs  routes.rs
src/helpers/: client.rs  env.rs  hash.rs  html.rs  mod.rs
src/models/: license.rs  mod.rs  owner.rs  permissions.rs  repository.rs
src/routes/: github.rs  healthcheck.rs  mod.rs  repository.rs
src/templates/: github_repository.html
templates/: github_repository.html
