[package]
name = "gh_private_card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
dotenv = "0.15.0"
headless_chrome = "1.0.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tera = "1.17.1"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
